--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.39.0",
     "@types/papaparse": "^5.5.0",
+    "@vercel/analytics": "^1.6.0",
     "clsx": "^2.1.0",
     "lucide-react": "^0.344.0",
     "papaparse": "^5.5.3",
